# rcc-renal-cell-carcinoma-simulator

./: .gitignore  LICENSE  README.md  convert_plots_to_pdf.py  install.sh  push_to_github.sh  pyproject.toml  requirements.txt  run.py  run_multiseed.sh  setup.sh  test_imports.py
.streamlit/: config.toml
.venv_py313_backup/: pyvenv.cfg
config/: default_params.yaml  scenario_params.yaml  sensitivity_consumption_0.5.yaml  sensitivity_consumption_1.0.yaml  sensitivity_consumption_2.0.yaml  sensitivity_consumption_4.0.yaml
docs/report/: Makefile  bibliography.bib  generate_figures.py  main.aux  main.bbl  main.blg  main.lof  main.lot  main.out  main.tex  main.toc  test_chapter.aux  test_chapter.out  test_chapter.tex  test_main.aux  test_main.tex  unicam_thesis.cls
docs/slides/: Makefile  index.html  slides.aux  slides.nav  slides.out  slides.tex  slides.toc
src/agents/: __init__.py  adipocyte.py  agent_types.py  blood.py  cd4_t_cell.py  cd4_t_cell_h1.py  cd4_t_cell_h2.py  cd8_cytotoxic_t_cell.py  cd8_t_cell.py  cell.py  cytokine.py  dendritic_cell.py  macrophage_m1.py  macrophage_m2.py  mast_cell.py  natural_killer.py  neutrophil.py  phagocytic_mixin.py  plasmacitoid_dc.py  regulatory_t_cell.py  sex_hormone.py  t_cell.py  tumor_cell.py
src/learning/: __init__.py  best_parameters.py  train_model.py
src/model/: __init__.py  cell_adder.py  measures_utils.py  observer.py  rcc_model.py
src/parameters/: __init__.py  model_parameters.py  parameters.py  patient_parameters.py  weight_parameters.py
src/systems/: __init__.py  dna.py  effect.py  glucose_field.py  grid_utils.py
tests/: __init__.py  test_dna.py  test_effects.py  test_glucose_field.py  test_single_step.py
ui/: __init__.py  app.py
(+255 files in other folders)
